trunk/Archive2/46/5a5d39bc6c9668/output
main.cpp: In member function 'MyClass::innerC& MyClass::getInnerC()':
main.cpp:13:17: error: invalid initialization of non-const reference of type 'MyClass::innerC&' from an rvalue of type 'MyClass::innerC*'
         return &inner;
                 ^
main.cpp: In function 'int main()':
main.cpp:19:5: error: 'innerC' was not declared in this scope
     innerC c = obj.getInnerC();
     ^
